start of mobile rvs

--- a/views/admin/shared-voter-turnout.ejs
+++ b/views/admin/shared-voter-turnout.ejs
@@ -3,10 +3,10 @@
   <div class="main-content">
    
     <div class="left-container">
-      <h1 class="ssc">Supreme Student Council</h1>
+      <h1 class="ssc" id="supreme-student-council">Supreme Student Council</h1>
       <br />
       <div class="main-left">
-        <h1 class="black">Total Voter Turnout</h1>
+        <h1 class="black" id="total-voter-turnout">Total Voter Turnout</h1>
         <div class="content-box-2">
           <br />
           <canvas id="chart-turnout"></canvas>
@@ -22,7 +22,7 @@
     </div>
     <div class="right-container">
        
-      <h1 class="lsc">Local Student Council</h1>
+      <h1 class="lsc" id="local-student-council">Local Student Council</h1>
       <br />
       <div class="campus">
         <select class="select">
@@ -32,7 +32,7 @@
       </div>
       <br />
       <div class="main-right">
-        <h1 class="black">Voter Turnout per College</h1>
+        <h1 class="black" id="voter-turnout-per-college">Voter Turnout per College</h1>
         <br />
         <div id="container-charts"></div>
       </div>
