--- a/views/homepages/rvs-voter-turnout.ejs
+++ b/views/homepages/rvs-voter-turnout.ejs
@@ -16,7 +16,7 @@
      <link rel="stylesheet" type="text/css" href="admin/css/index-election.css" />
      <link rel="stylesheet" type="text/css" href="admin/css/voter-turnout.css" />
 
-
+     
     
     <!-- External Libraries -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
@@ -31,6 +31,8 @@
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <link rel="stylesheet" type="text/css" href="css/home.css" />
     <link rel="stylesheet" type="text/css" href="css/rvs.css" />
+
+    <link rel="stylesheet" type="text/css" href="css/mobile-voter-turnout.css" />
   </head>
   <body>
     <header class="header">
@@ -72,7 +74,7 @@
           <p>This page shows the total number of students who participated in the election, providing a clear overview of voter engagement. Explore the participation rate across SSC and LSC elections to see how many students made their voices heard.</p>
          <br />
 <br />
-<h2 class="rvs-title"><u>Voter Turnout</u></h2>
+<h2 class="rvs-title" id="voter-turnout"><u>Voter Turnout</u></h2>
           <br />
           <br />
          
