--- a/views/homepages/rvs-about.ejs
+++ b/views/homepages/rvs-about.ejs
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="css/home.css" />
      <link rel="stylesheet" type="text/css" href="css/rvs.css" />
     <!-- <link rel="stylesheet" type="text/css" href="css/index_election.css" /> -->
-   
+    <link rel="stylesheet" type="text/css" href="css/mobile-about.css" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 
@@ -34,17 +34,18 @@
 
       <div class="content-main">
         <div class="main-first">
-          <ul class="header-nav-content">
-            <li><a href="/rvs-about" id="active-link2">About</a></li>
-            <li><a href="/rvs-voter-turnout">Voter Turnout</a></li>
-            <li><a href="/rvs-votes-per-candidate">Votes per Candidate</a></li>
-            <li><a href="/rvs-election-results">Election Results</a></li>
-          </ul>
           <div class="election-title">
             <p class="title">
-              <span>BulSU Student Government Elections S.Y. 2025 - 2026</span>
+              <%= electionConfig.electionName %>
             </p>
           </div>
+          <ul class="header-nav-content">
+            <li><a href="/rvs-about">About</a></li>
+            <li><a href="/rvs-voter-turnout">Voter Turnout</a></li>
+            <li><a href="/rvs-votes-per-candidate" id="active-link2">Votes per Candidate</a></li>
+            <li><a href="/rvs-election-results">Election Results</a></li>
+          </ul>
+          
         </div>
 
         <div class="beside">
