--- a/views/homepages/rvs-votes-per-candidate.ejs
+++ b/views/homepages/rvs-votes-per-candidate.ejs
@@ -110,22 +110,24 @@
 
     <div class="content">
       <div class="content-title">
-        <h3 class="h3" style="text-transform: uppercase">Welcome to the Bulacan State University Student Government Elections - Results Verification Portal!</h3>
+        <h3 class="h3" style="text-transform: uppercase">Welcome to the BulSU Student Government Elections - Results Verification Portal!</h3>
       </div>
 
       <div class="content-main">
+        
         <div class="main-first">
+          <div class="election-title">
+            <p class="title">
+              <%= electionConfig.electionName %>
+            </p>
+          </div>
           <ul class="header-nav-content">
             <li><a href="/rvs-about">About</a></li>
             <li><a href="/rvs-voter-turnout">Voter Turnout</a></li>
             <li><a href="/rvs-votes-per-candidate" id="active-link2">Votes per Candidate</a></li>
             <li><a href="/rvs-election-results">Election Results</a></li>
           </ul>
-          <div class="election-title">
-            <p class="title">
-              <span>BulSU Student Government Elections S.Y. 2025 - 2026</span>
-            </p>
-          </div>
+          
         </div>
 
         <div class="beside">
