--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -58,7 +58,7 @@
               </div>
             </div>
           
-            <div class="quick-actions-buttons">
+            <div class="quick-actions-buttons second">
               <i class="fa fa-bar-chart" aria-hidden="true"></i>
               <p>Election Results</p>
               <div class="view-export">
@@ -70,7 +70,7 @@
               </div>
             </div>
           
-            <div class="quick-actions-buttons">
+            <div class="quick-actions-buttons third">
               <i class="fas fa-list-ol"></i>
               <p>Vote Tally</p>
               <div class="view-export">
@@ -82,7 +82,7 @@
               </div>
             </div>
           
-            <div class="quick-actions-buttons">
+            <div class="quick-actions-buttons fourth">
               <i class="fa fa-users"></i>
               <p>Candidates</p>
               <div class="view-export">
@@ -94,7 +94,7 @@
               </div>
             </div>
           
-            <div class="quick-actions-buttons last">
+            <div class="quick-actions-buttons last fifth">
               <i class="fa-solid fa-user-tie"></i>
               <p>Admin Accounts</p>
               <div class="view-export">
